--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,79 @@
 }
 
 body {
-  ffont-family: Arial, Helvetica, sans-serif;
-  background: #24282f;
-  color: rgb(158, 158, 158);
+  font-family: Arial, Helvetica, sans-serif;
+  background: #64dfdf;
+  color: 48bfe3;
   margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  background: #64dfdf;
+}
+
+.navbar {
+  background: #5e60ce;
+  margin: 2em;
+  padding: 0.02em;
+  border-radius: 3em;
+}
+
+.navbar ul {
+  list-style: none;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+}
+
+.navbar a {
+  color: #fff;
+}
+
+.profile {
+  background: #4ea8de;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 5fr;
+  margin: 2em;
+  padding: 5em;
+  border-radius: 3em;
+}
+
+.profile img {
+  width: 150px;
+  padding: 0;
+}
+
+.profile-info {
+  padding: 0.75;
+}
+
+.main {
+  background: #5390d9;
+  margin: 2em;
+  padding: 5em;
+  border-radius: 3em;
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.main img {
+  width: 150px;
+  padding: 0;
+}
+
+.footer {
+  background: #5e60ce;
+  margin: 2em;
+  padding: 0.02em;
+  border-radius: 3em;
+}
+
+.footer a {
+  color: white;
 }
